force-app/main/default/objects/Imputation_Center_Settings__mdt/Imputation_Center_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Imputation Center Settings</label>
    <pluralLabel>Imputation Center Settings</pluralLabel>
</CustomObject>