force-app/main/default/objects/Imputation_Center_Settings__mdt/fields/Ayuda_Admin__c.field-meta.xml
<CustomField>
    <fullName>Ayuda_Admin__c</fullName>
    <label>Ayuda administradores</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>