force-app/main/default/objects/Imputation_Center_Settings__mdt/fields/Campo_PEP_Case__c.field-meta.xml
<CustomField>
    <fullName>Campo_PEP_Case__c</fullName>
    <label>Campo motivo Case (opc.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>