force-app/main/default/objects/Imputation_Center_Settings__mdt/fields/Horas_Dia_Lab__c.field-meta.xml
<CustomField>
    <fullName>Horas_Dia_Lab__c</fullName>
    <label>Horas d�a laborable</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>