force-app/main/default/objects/Imputation_Center_Settings__mdt/fields/Lista_PEP_AMS__c.field-meta.xml
<CustomField>
    <fullName>Lista_PEP_AMS__c</fullName>
    <label>Motivos AMS - API Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>