force-app/main/default/objects/Imputation_Center_Settings__mdt/fields/Meta_Fact_Pct__c.field-meta.xml
<CustomField>
    <fullName>Meta_Fact_Pct__c</fullName>
    <label>Meta facturable %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>